Spacing issue

--- a/dev/css/component/get-quote-find-office.css
+++ b/dev/css/component/get-quote-find-office.css
@@ -138,15 +138,15 @@
         max-width: 1300px;
     }
     .quote-office--left, .quote-office--right {
-        width: calc(49% - 10px);
+        width: calc(46% - 10px);
     }
     .quote-office--right  {
-        margin-right:15px;
+        margin-right:35px;
     }
 
     .quote-office--left{
 
-        margin-left:15px;
+        margin-left:35px;
     }
 
 
